# doc_gen

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  todo.md
.github/workflows/: push.yml
dataset_processing/: annotate_gpt.py  dataset_processing.py  dataset_utils.ipynb  distil_gpt.py  filter_grammar.ipynb  filter_length.ipynb  google_style_grammar.txt  grammar_filter.py  join_pkl_datasets.py  mix_generated_human_made.py  numpydoc_grammar.txt
documentation/: doc.md  eval_example.json  example_functions.py  example_functions_annotated.py  links.txt  thesis_assignment.txt
evaluation/: code_anotation.py  configuration.json  corpus.py  corpus_processor.py  evaluator.py  google_style_grammar.txt  metrics.py  model_loader.py  test_meteor.ipynb  test_model.py
fine_tuning/: fine_tuning_main.py  fine_tuning_parameters.json  fine_tuning_parameters_peft.json  fine_tuning_peft.py  fine_tuning_utils.py  gpt2_training.py  gpt_2_training.ipynb  model_args.py  parameters.txt  testing.ipynb  testing_trainer.ipynb  testing_trainer.py  trainer_container.py  trainer_stat_collector.py  translation_fine_tuning.py
perf_test/: data.py  graphs.ipynb  main.py
perf_test/measurements/: codet5p_220m_1cpu.txt  codet5p_220m_1gpu.txt  codet5p_220m_2cpu.txt  codet5p_220m_2gpu.txt  codet5p_220m_4cpu.txt  codet5p_220m_4gpu.txt  codet5p_220m_6cpu.txt  codet5p_220m_6gpu.txt  codet5p_220m_8cpu.txt  codet5p_220m_8gpu.txt  codet5p_770m_2gpu.txt
server/: .gitignore  app.py  cli_app.py  client.py  docstring_generators.py  docstring_transformer.py  main.py  model_loader.py  server.py  server_config.json  test_1.py  test_ping.py
server/constant_docstring_generator/: model.py
server/ct2_codet5p_220m_docstring/: config.json  model.py
server/ct2_codet5p_770m_docstring/: config.json  model.py
server/ct2_led_large_16384_docstring/: config.json  model.py
server/gpt_online_generator/: model.py
server/led_base_16384_docstring/: config.json  model.py
server/predibase_model/: config.json  model.py
src/: dataset_processing.py
test/: test_trainer_stat_collector.py
tryout/: code_falcon7b.py  code_llama.py  codet5.py  falcon_pretraining.py  gpt2.py  main.py  model.py  t5.py
